@@ -126,13 +126,17 @@ int stm32_dumpgpio(uint32_t pinset, const char *msg)
   if ((getreg32(STM32_RCC_APB2ENR) & RCC_APB2ENR_IOPEN(port)) != 0)
     {
       lldbg("  CR: %08x %08x IDR: %04x ODR: %04x LCKR: %04x\n",
-            getreg32(base + STM32_GPIO_CRH_OFFSET), getreg32(base + STM32_GPIO_CRL_OFFSET),
-            getreg32(base + STM32_GPIO_IDR_OFFSET), getreg32(base + STM32_GPIO_ODR_OFFSET),
+            getreg32(base + STM32_GPIO_CRH_OFFSET),
+            getreg32(base + STM32_GPIO_CRL_OFFSET),
+            getreg32(base + STM32_GPIO_IDR_OFFSET),
+            getreg32(base + STM32_GPIO_ODR_OFFSET),
             getreg32(base + STM32_GPIO_LCKR_OFFSET));
       lldbg("  EVCR: %02x MAPR: %08x CR: %04x %04x %04x %04x\n",
             getreg32(STM32_AFIO_EVCR), getreg32(STM32_AFIO_MAPR),
-            getreg32(STM32_AFIO_EXTICR1), getreg32(STM32_AFIO_EXTICR2),
-            getreg32(STM32_AFIO_EXTICR3), getreg32(STM32_AFIO_EXTICR4));
+            getreg32(STM32_AFIO_EXTICR1),
+            getreg32(STM32_AFIO_EXTICR2),
+            getreg32(STM32_AFIO_EXTICR3),
+            getreg32(STM32_AFIO_EXTICR4));
     }
   else
     {
@@ -144,21 +148,26 @@ int stm32_dumpgpio(uint32_t pinset, const char *msg)
 
   lldbg("GPIO%c pinset: %08x base: %08x -- %s\n",
         g_portchar[port], pinset, base, msg);
-  if ((getreg32(STM32_RCC_APB1ENR) & RCC_AHB1ENR_GPIOEN(port)) != 0)
+  if ((getreg32(STM32_RCC_AHB1ENR) & RCC_AHB1ENR_GPIOEN(port)) != 0)
     {
-      lldbg("  MODE: %08x OTYPE: %04x     OSPEED: %08x PUPDR: %08x\n",
-            getreg32(base + STM32_GPIO_MODER_OFFSET), getreg32(base + STM32_GPIO_OTYPER_OFFSET),
-            getreg32(base + STM32_GPIO_OSPEED_OFFSET), getreg32(base + STM32_GPIO_PUPDR_OFFSET));
-      lldbg("  IDR: %04x       ODR: %04x       BSRR: %08x   LCKR: %04x\n",
-            getreg32(STM32_GPIO_IDR_OFFSET), getreg32(STM32_GPIO_ODR_OFFSET),
-            getreg32(STM32_GPIO_BSRR_OFFSET), getreg32(STM32_GPIO_LCKR_OFFSET));
+      lldbg(" MODE: %08x OTYPE: %04x     OSPEED: %08x PUPDR: %08x\n",
+            getreg32(base + STM32_GPIO_MODER_OFFSET),
+            getreg32(base + STM32_GPIO_OTYPER_OFFSET),
+            getreg32(base + STM32_GPIO_OSPEED_OFFSET),
+            getreg32(base + STM32_GPIO_PUPDR_OFFSET));
+      lldbg("  IDR: %04x       ODR: %04x       BSRR: %08x  LCKR: %04x\n",
+            getreg32(base + STM32_GPIO_IDR_OFFSET),
+            getreg32(base + STM32_GPIO_ODR_OFFSET),
+            getreg32(base + STM32_GPIO_BSRR_OFFSET),
+            getreg32(base + STM32_GPIO_LCKR_OFFSET));
       lldbg(" AFRH: %08x  AFRL: %08x\n",
-            getreg32(STM32_GPIO_ARFH_OFFSET), getreg32(STM32_GPIO_AFRL_OFFSET));
+            getreg32(base + STM32_GPIO_ARFH_OFFSET),
+            getreg32(base + STM32_GPIO_AFRL_OFFSET));
     }
   else
     {
-      lldbg("  GPIO%c not enabled: APB1ENR: %08x\n",
-            g_portchar[port], getreg32(STM32_RCC_APB1ENR));
+      lldbg("  GPIO%c not enabled: AHB1ENR: %08x\n",
+            g_portchar[port], getreg32(STM32_RCC_AHB1ENR));
     }
 #else
 # error "Unsupported STM32 chip"
